made some changes to the website

--- a/contact.html
+++ b/contact.html
@@ -561,8 +561,8 @@
                 <div>
                   <h4>Location</h4>
                   <p>
-                    First Unity Estate, Off Cooperative Villa, Badore, Ajah, Lagos,
-                    Nigeria
+                    First Unity Estate, Off Cooperative Villa, Badore, Ajah,
+                    Lagos, Nigeria
                   </p>
                 </div>
               </li>
@@ -657,12 +657,9 @@
                     alt="Franciscan Catholic School Logo"
                   />
                 </div>
-                <h3>Franciscan Catholic School</h3>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <p>
-                Quality Catholic Education Rooted in Franciscan Values Since
-                2025.
-              </p>
+              <p>Quality Catholic Education Rooted in Franciscan Values</p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -689,11 +686,6 @@
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
                 </li> -->
-                <!-- <li>
-                  <a href="news.html"
-                    ><i class="fas fa-angle-right"></i> News & Events</a
-                  >
-                </li> -->
                 <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
@@ -716,6 +708,11 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
                   >
@@ -728,11 +725,15 @@
               <ul>
                 <li>
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
-                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i>+234 912 660 5391</li>
                 <li>
-                  <i class="fas fa-envelope"></i> info@franciscancatholicschool
+                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
+                  5251
+                </li>
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  info@franciscancatholicschool
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
