--- a/corevalues.html
+++ b/corevalues.html
@@ -411,7 +411,9 @@
             <a href="contact.html#appointment" class="cta-button"
               >Book a Tour</a
             >
-            <button onclick="downloadProspectus()" class="btn-secondary">📄 Download Prospectus</button>
+            <button onclick="downloadProspectus()" class="btn-secondary">
+              📄 Download Prospectus
+            </button>
           </div>
         </div>
       </div>
@@ -433,10 +435,7 @@
                 </div>
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <p>
-                Quality Catholic Education Rooted in Franciscan Values Since
-                2025.
-              </p>
+              <p>Quality Catholic Education Rooted in Franciscan Values</p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -464,11 +463,6 @@
                   >
                 </li> -->
                 <li>
-                  <a href="news.html"
-                    ><i class="fas fa-angle-right"></i> News & Events</a
-                  >
-                </li>
-                <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
                   >
@@ -490,43 +484,39 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
-                  >
-                </li>
-                <li>
-                  <a href="afterschool.html"
-                    ><i class="fas fa-angle-right"></i> After School
-                    Programme</a
-                  >
-                </li>
-                <li>
-                  <a href="holiday.html"
-                    ><i class="fas fa-angle-right"></i> Holiday Programme</a
                   >
                 </li>
               </ul>
             </div>
 
             <div class="footer-section contact">
-            <h4>Contact Information</h4>
-            <ul>
-              <li>
-                <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
-              </li>
-              <li>
-                <i class="fas fa-phone"></i> +234 912 660 5391
-              </li>
-              <li>
-                <i class="fas fa-envelope"></i>
-                info@franciscancatholicschool
-              </li>
-              <li>
-                <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
-                PM
-              </li>
-            </ul>
-          </div>
+              <h4>Contact Information</h4>
+              <ul>
+                <li>
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
+                </li>
+                <li>
+                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
+                  5251
+                </li>
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  info@franciscancatholicschool
+                </li>
+                <li>
+                  <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
+                  PM
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
