--- a/creche.html
+++ b/creche.html
@@ -748,71 +748,121 @@
   
       <!-- Footer section begins -->
       <footer class="footer">
-        <div class="footer-top">
-          <div class="container">
-            <div class="footer-content">
-              <div class="footer-section about">
-                <div class="footer-logo">
-                  <div class="logo-circle">
-                    <img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" />
-                  </div>
-                  <h3>Franciscan Catholic Nursery & Primary School</h3>
+      <div class="footer-top">
+        <div class="container">
+          <div class="footer-content">
+            <div class="footer-section about">
+              <div class="footer-logo">
+                <div class="logo-circle">
+                  <img
+                    src="assets/img/logo.jpg"
+                    alt="Franciscan Catholic School Logo"
+                  />
                 </div>
-                <p>Providing quality Catholic education since 1995. Building faith, knowledge, and character in young minds.</p>
-                <div class="social-links">
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="#"><i class="fab fa-instagram"></i></a>
-                  <a href="#"><i class="fab fa-youtube"></i></a>
-                </div>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-  
-              <div class="footer-section links">
-                <h4>Quick Links</h4>
-                <ul>
-                  <li><a href="about.html"><i class="fas fa-angle-right"></i> About Us</a></li>
-                  <li><a href="programme.html"><i class="fas fa-angle-right"></i> Our Programmes</a></li>
-                  <!-- <li><a href="gallery.html"><i class="fas fa-angle-right"></i> Gallery</a></li> -->
-                  <li><a href="news.html"><i class="fas fa-angle-right"></i> News & Events</a></li>
-                  <li><a href="contact.html"><i class="fas fa-angle-right"></i> Contact Us</a></li>
-                </ul>
+              <p>
+                Quality Catholic Education Rooted in Franciscan Values
+              </p>
+              <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
               </div>
-  
-              <div class="footer-section programmes">
-                <h4>Our Programmes</h4>
-                <ul>
-                  <li><a href="creche.html"><i class="fas fa-angle-right"></i> Creche</a></li>
-                  <li><a href="preschool.html"><i class="fas fa-angle-right"></i> Pre-School</a></li>
-                  <li><a href="primary.html"><i class="fas fa-angle-right"></i> Primary School</a></li>
-                  <li><a href="afterschool.html"><i class="fas fa-angle-right"></i> After School Programme</a></li>
-                  <li><a href="holiday.html"><i class="fas fa-angle-right"></i> Holiday Programme</a></li>
-                </ul>
-              </div>
-  
-              <div class="footer-section contact">
-                <h4>Contact Information</h4>
-                <ul>
-                  <li><i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki Phase 1, Lagos, Nigeria</li>
-                  <li><i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345 6789</li>
-                  <li><i class="fas fa-envelope"></i> info@franciscancatholicschool.edu.ng</li>
-                  <li><i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30 PM</li>
-                </ul>
-              </div>
+            </div>
+
+            <div class="footer-section links">
+              <h4>Quick Links</h4>
+              <ul>
+                <li>
+                  <a href="about.html"
+                    ><i class="fas fa-angle-right"></i> About Us</a
+                  >
+                </li>
+                <li>
+                  <a href="programme.html"
+                    ><i class="fas fa-angle-right"></i> Our Programmes</a
+                  >
+                </li>
+                <!-- <li>
+                  <a href="gallery.html"
+                    ><i class="fas fa-angle-right"></i> Gallery</a
+                  >
+                </li> -->
+                <li>
+                  <a href="contact.html"
+                    ><i class="fas fa-angle-right"></i> Contact Us</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer-section programmes">
+              <h4>Our Programmes</h4>
+              <ul>
+                <li>
+                  <a href="creche.html"
+                    ><i class="fas fa-angle-right"></i> Creche</a
+                  >
+                </li>
+                <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Pre-School</a
+                  >
+                </li>
+                <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
+                  <a href="primary.html"
+                    ><i class="fas fa-angle-right"></i> Primary School</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer-section contact">
+              <h4>Contact Information</h4>
+              <ul>
+                <li>
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
+                </li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  info@franciscancatholicschool
+                </li>
+                <li>
+                  <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
+                  PM
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-  
-        <div class="footer-bottom">
-          <div class="container">
-            <p>&copy; 2025 Franciscan Catholic Nursery and Primary School. All Rights Reserved.</p>
-            <p>Designed by <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a></p>
-          </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="container">
+          <p>
+            &copy; 2025 Franciscan Catholic Nursery and Primary School. All
+            Rights Reserved.
+          </p>
+          <p>
+            Designed by
+            <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a>
+          </p>
         </div>
-  
-        <button id="scrollToTop" class="scroll-to-top">
-          <i class="fas fa-arrow-up"></i>
-        </button>
-      </footer>
+      </div>
+
+      <button id="scrollToTop" class="scroll-to-top">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+    </footer>
       <!-- Footer section ends -->
   
       <script src="assets/js/franciscan.js"></script>
