--- a/primary.html
+++ b/primary.html
@@ -85,7 +85,7 @@
         <div class="programme-badge">Ages 5-11 years</div>
         <h1>Primary School Programme</h1>
         <div class="breadcrumb">
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
           <i class="fas fa-angle-right"></i>
           <a href="programme.html">Programmes</a>
           <i class="fas fa-angle-right"></i>
@@ -956,8 +956,7 @@
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Quality Catholic Education Rooted in Franciscan Values Since
-                2025.
+                Quality Catholic Education Rooted in Franciscan Values
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1007,6 +1006,11 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
                   >
@@ -1021,7 +1025,7 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancatholicschool
