--- a/preschool.html
+++ b/preschool.html
@@ -36,10 +36,10 @@
               alt="Franciscan Catholic School Logo"
           /></a>
         </div>
-        <span>Franciscan Catholic School</span>
+        <span>Franciscan Catholic Nursery and Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger"
             >About <i class="fas fa-chevron-down"></i
@@ -47,7 +47,6 @@
           <div class="dropdown-content">
             <a href="welcome.html">Welcome Note</a>
             <a href="corevalues.html">Our Core Values</a>
-            <a href="history.html">Our History</a>
           </div>
         </div>
         <div class="dropdown">
@@ -65,12 +64,11 @@
               </div>
             </div>
             <a href="primary.html">Primary</a>
-            <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
-        <a href="portal.html" class="portal-btn">Student Portal</a>
+        <a href="portal.html" class="portal-btn">Portal</a>
       </div>
       <div class="hamburger">
         <span></span>
@@ -87,7 +85,7 @@
         <div class="programme-badge">Ages 3-4 years</div>
         <h1>PreSchool Programme</h1>
         <div class="breadcrumb">
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
           <i class="fas fa-angle-right"></i>
           <a href="programme.html">Programmes</a>
           <i class="fas fa-angle-right"></i>
@@ -925,11 +923,10 @@
                     alt="Franciscan Catholic School Logo"
                   />
                 </div>
-                <h3>Franciscan Catholic School</h3>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Providing quality Catholic education since 1995. Building faith,
-                knowledge, and character in young minds.
+                Quality Catholic Education Rooted in Franciscan Values
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -952,16 +949,11 @@
                     ><i class="fas fa-angle-right"></i> Our Programmes</a
                   >
                 </li>
-                <li>
+                <!-- <li>
                   <a href="gallery.html"
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
-                </li>
-                <li>
-                  <a href="news.html"
-                    ><i class="fas fa-angle-right"></i> News & Events</a
-                  >
-                </li>
+                </li> -->
                 <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
@@ -984,19 +976,13 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
-                  >
-                </li>
-                <li>
-                  <a href="afterschool.html"
-                    ><i class="fas fa-angle-right"></i> After School
-                    Programme</a
-                  >
-                </li>
-                <li>
-                  <a href="holiday.html"
-                    ><i class="fas fa-angle-right"></i> Holiday Programme</a
                   >
                 </li>
               </ul>
@@ -1006,16 +992,13 @@
               <h4>Contact Information</h4>
               <ul>
                 <li>
-                  <i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki
-                  Phase 1, Lagos, Nigeria
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li>
-                  <i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345
-                  6789
-                </li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool.edu.ng
+                  info@franciscancatholicschool
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
