--- a/contact.html
+++ b/contact.html
@@ -128,8 +128,9 @@
               <i class="fas fa-phone-alt"></i>
             </div>
             <h3>Call Us</h3>
-            <p>+234 912 660 5391</p>
-            <a href="tel:+2348034567890" class="contact-link">Call Now</a>
+            <p>+234 913 653 8240, +234 907 768
+                  5251</p>
+            <a href="tel:+2349136538240" class="contact-link">Call Now</a>
           </div>
 
           <div class="contact-info-card">
@@ -137,8 +138,8 @@
               <i class="fas fa-envelope"></i>
             </div>
             <h3>Email Us</h3>
-            <p>info@franciscancatholicschool.edu.ng</p>
-            <p>admissions@franciscancatholicschool.edu.ng</p>
+            <p>info@fcnpschool.edu.ng</p>
+            <p>admissions@fcnpschool.edu.ng</p>
             <a
               href="mailto:info@franciscancatholicschool.edu.ng"
               class="contact-link"
@@ -167,7 +168,7 @@
             <p><strong>Account Number:</strong> 2006324090</p>
             <p><strong>Bank:</strong> First Bank</p>
             <a href="tel:+2349126605391" class="contact-link"
-              >Contact for Payment Queries</a
+              >Contact School Bursar Payment Queries</a
             >
           </div>
         </div>
@@ -260,7 +261,7 @@
             <h2>Admission Enquiry</h2>
             <p>
               Interested in enrolling your child at Franciscan Catholic School?
-              Download our admission form or schedule a visit to our campus.
+              Admission forms are purchased in the school.
             </p>
             <div class="admission-buttons">
               <a
@@ -399,7 +400,7 @@
           <div class="appointment-form-container">
             <h2>Book an Appointment</h2>
             <p>
-              Schedule a visit to our campus to learn more about our programs
+              Schedule a visit to our school to learn more about our programs
               and facilities.
             </p>
 
