worked on the preschool and contact pages

--- a/contact.html
+++ b/contact.html
@@ -260,17 +260,17 @@
           <div class="admission-content">
             <h2>Admission Enquiry</h2>
             <p>
-              Interested in enrolling your child at Franciscan Catholic School?
+              Interested in enrolling your child at Franciscan Catholic Nursery and Primary School?
               Admission forms are purchased in the school.
             </p>
             <div class="admission-buttons">
-              <a
+              <!-- <a
                 href="assets/docs/admission-form.html"
                 class="download-btn"
                 target="_blank"
               >
                 <i class="fas fa-file-alt"></i> View Admission Form
-              </a>
+              </a> -->
               <a href="#appointment" class="visit-btn">
                 <i class="fas fa-calendar-check"></i> Schedule a Visit
               </a>
@@ -502,7 +502,7 @@
                     <option value="" disabled selected>Select purpose</option>
                     <option value="General Inquiry">General Inquiry</option>
                     <option value="Admission">Admission</option>
-                    <option value="Campus Tour">Campus Tour</option>
+                    <option value="School Tour">School Tour</option>
                     <option value="Meet with Teacher">Meet with Teacher</option>
                     <option value="Meet with Principal">
                       Meet with Principal
@@ -552,7 +552,7 @@
                 <div>
                   <h4>What to Expect</h4>
                   <p>
-                    Campus tour, meeting with relevant staff, and discussion of
+                    School tour, meeting with relevant staff, and discussion of
                     programs
                   </p>
                 </div>
@@ -592,7 +592,7 @@
               Follow us on social media to stay updated with school activities,
               events, and announcements.
             </p>
-            <div class="social-media-icons">
+            <!-- <div class="social-media-icons">
               <a
                 href="https://facebook.com/franciscancatholicschool"
                 target="_blank"
@@ -621,7 +621,7 @@
               >
                 <i class="fab fa-youtube"></i>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
