--- a/preschool.html
+++ b/preschool.html
@@ -189,10 +189,10 @@
       <div class="container">
         <div class="teacher-ratio-container">
           <div class="teacher-ratio-image">
-            <img
+            <!-- <img
               src="assets/img/class-2.jpg"
               alt="Teacher with PreSchool Children"
-            />
+            /> -->
           </div>
 
           <div class="teacher-ratio-content">
@@ -283,10 +283,10 @@
 
         <div class="development-areas-container">
           <div class="development-image">
-            <img
+            <!-- <img
               src="assets/img/preschool2.jpg"
               alt="PreSchool Development Activities"
-            />
+            /> -->
           </div>
 
           <div class="development-areas-list">
@@ -631,10 +631,10 @@
           </div>
 
           <div class="learning-approach-image">
-            <img
+            <!-- <img
               src="assets/img/creche2.jpg"
               alt="PreSchool Learning Activities"
-            />
+            /> -->
           </div>
         </div>
       </div>
@@ -658,10 +658,10 @@
 
         <div class="transition-container">
           <div class="transition-image">
-            <img
+            <!-- <img
               src="assets/img/eyearsplay.jpg"
               alt="Transition to Primary School"
-            />
+            /> -->
           </div>
 
           <div class="transition-content">
@@ -757,7 +757,7 @@
     <!-- Transition to Primary Section ends -->
 
     <!-- Parent Testimonials Section begins -->
-    <section class="testimonials-section">
+    <!-- <section class="testimonials-section">
       <div class="container">
         <div class="section-header">
           <h2>Parent Testimonials</h2>
@@ -838,7 +838,7 @@
           </button>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Parent Testimonials Section ends -->
 
     <!-- Enrollment CTA Section begins -->
@@ -901,7 +901,7 @@
             <p>
               View important dates, holidays, and events for the academic year.
             </p>
-            <a href="calendar.html" class="btn-secondary">
+            <a href="calendar.html" class="btn-secondary" onclick="alert('coming soon'); return false;">
               View Calendar <i class="fas fa-arrow-right"></i>
             </a>
           </div>
