made the forms to submit

--- a/contact.html
+++ b/contact.html
@@ -217,10 +217,10 @@
               <i class="fas fa-envelope"></i>
             </div>
             <h3>Email Us</h3>
-            <p>info@fcnpschool.edu.ng</p>
-            <p>admissions@fcnpschool.edu.ng</p>
+            <p>info@franciscancnps.org</p>
+            <!-- <p>admissions@fcnpschool.edu.ng</p> -->
             <a
-              href="mailto:info@franciscancatholicschool.edu.ng"
+              href="mailto:info@franciscancnps.org"
               class="contact-link"
               >Send Email</a
             >
@@ -813,7 +813,7 @@
                 </li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool
+                  info@franciscancnps.org
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
