--- a/home.html
+++ b/home.html
@@ -594,7 +594,7 @@
                 <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool
+                  info@franciscancnps.org
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
