--- a/contact.html
+++ b/contact.html
@@ -307,6 +307,12 @@
                 ></textarea>
               </div>
 
+              <!-- Honeypot field (hidden from users) -->
+              <div class="visually-hidden" aria-hidden="true" style="position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden;">
+                <label for="contactHp">Leave this field empty</label>
+                <input type="text" id="contactHp" name="contactHp" tabindex="-1" autocomplete="off" />
+              </div>
+
               <div class="form-group">
                 <button type="submit" class="submit-btn">
                   <span>Send Message</span>
@@ -598,6 +604,12 @@
                   name="additionalInfo"
                   rows="3"
                 ></textarea>
+              </div>
+
+              <!-- Honeypot field (hidden from users) -->
+              <div class="visually-hidden" aria-hidden="true" style="position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden;">
+                <label for="appointmentHp">Leave this field empty</label>
+                <input type="text" id="appointmentHp" name="appointmentHp" tabindex="-1" autocomplete="off" />
               </div>
 
               <div class="form-group">
