--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -90,7 +90,6 @@
             <span class="bar"></span>
           </button>
           <div class="header-breadcrumb">
-            <span class="breadcrumb-pill">Finance Suite</span>
             <h1>Welcome, <span id="welcome-name">Sr. Clare</span></h1>
           </div>
           <div class="header-actions">
@@ -108,7 +107,7 @@
             <div class="banner-overlay"></div>
             <div class="banner-content">
               <h2>
-                <i class="fas fa-hand-holding-heart"></i> Steward of Stewardship
+                Payment Hub
               </h2>
               <p>
                 Track tuition payments, allocate resources wisely, and deliver
