--- a/portal.html
+++ b/portal.html
@@ -231,6 +231,7 @@
       <i class="fas fa-home"></i>
     </a>
 
+    <script src="assets/js/api.js"></script>
     <script src="assets/js/portal.js"></script>
   </body>
 </html>
