worked on the bursar page

--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -154,7 +154,7 @@
                   effortlessly.
                 </p>
               </div>
-              <button class="btn-action" data-target="#payment-modal">
+              <button class="btn-action" id="record-payment-btn">
                 Launch Form <i class="fas fa-arrow-right"></i>
               </button>
             </div>
