worked on the admin login

--- a/portal.html
+++ b/portal.html
@@ -54,75 +54,28 @@
         <div class="portal-forms">
           <!-- Student Login Form -->
           <div class="login-form active" id="student-login">
-            <h2>Student Portal Login</h2>
-            <p>Enter your student ID and password to access your dashboard</p>
-
-            <form action="#" method="post">
-              <div class="form-group">
-                <label for="student-id">Student ID</label>
-                <input
-                  type="text"
-                  id="student-id"
-                  name="student-id"
-                  placeholder="Enter your student ID"
-                  required
-                />
-              </div>
-
-              <div class="form-group">
-                <label for="student-password">Password</label>
-                <div class="password-input">
-                  <input
-                    type="password"
-                    id="student-password"
-                    name="student-password"
-                    placeholder="Enter your password"
-                    required
-                  />
-                  <button type="button" class="toggle-password">
-                    <i class="fas fa-eye"></i>
-                  </button>
-                </div>
-              </div>
-
-              <div class="form-group remember-me">
-                <input
-                  type="checkbox"
-                  id="student-remember"
-                  name="student-remember"
-                />
-                <label for="student-remember">Remember me</label>
-              </div>
-
-              <div class="form-actions">
-                <button type="submit" class="btn-login">
-                  Login <i class="fas fa-sign-in-alt"></i>
-                </button>
-                <a href="#" class="forgot-password">Forgot Password?</a>
-              </div>
-            </form>
-
-            <div class="portal-help">
-              <p>
-                Need help logging in? Contact your class teacher or call the
-                school office at <strong>+234 913 653 8240</strong>
-              </p>
+            <h2>Student Portal</h2>
+            <div class="coming-soon">
+              <i class="fas fa-graduation-cap" style="font-size: 3rem; color: #8B4513; margin-bottom: 1rem;"></i>
+              <h3>Coming Soon</h3>
+              <p>Student portal will be available once students are enrolled and registered by the administration.</p>
+              <p>For enrollment inquiries, please contact the school office at <strong>+234 913 653 8240</strong></p>
             </div>
           </div>
 
           <!-- Teacher Login Form -->
           <div class="login-form" id="teacher-login">
             <h2>Teacher Portal Login</h2>
-            <p>Enter your staff ID and password to access your dashboard</p>
+            <p>Enter your staff credentials to access your dashboard</p>
 
             <form action="#" method="post">
               <div class="form-group">
-                <label for="teacher-id">Staff ID</label>
+                <label for="teacher-id">Staff ID / Username</label>
                 <input
                   type="text"
                   id="teacher-id"
                   name="teacher-id"
-                  placeholder="Enter your staff ID"
+                  placeholder="Enter your staff ID or username"
                   required
                 />
               </div>
